examples/shell_executor/lb.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: edge
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  virtual_hosts:
                    - name: direct_response_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: tcp_cluster
  clusters:
    - name: tcp_cluster
      connect_timeout: 5s
      lb_policy: MAGLEV
      health_checks:
        - timeout: 3s
          interval: 5s
          interval_jitter: 1s
          unhealthy_threshold: 3
          healthy_threshold: 3
          http_health_check:
            path: "/leader"
      common_lb_config:
        healthy_panic_threshold:
          value: 0.0
      load_assignment:
        cluster_name: tcp_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 9001
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 9001 }
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 9002
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 9002 }
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 9003
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 9003 }
